refactor: check duplicated data by date and localName